--- a/lib-app/src/styles.css
+++ b/lib-app/src/styles.css
@@ -1,8 +1,9 @@
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 body {
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
+  background-color: #e9ecef;
 }
 
 .basic-container {
@@ -22,4 +23,25 @@ body {
 
 .main-full-width {
   width: 100%;
+}
+
+.btn-register {
+  float: right;
+}
+
+.btn-login {
+}
+
+.txt-login {
+  text-align: center;
+}
+
+.form-login {
+  margin: 50px;
+}
+
+.card-login {
+    width: 600px;
+    margin: 50px auto;
+
 }
