--- a/lib-app/src/app/home-reader/home-reader.component.html
+++ b/lib-app/src/app/home-reader/home-reader.component.html
@@ -1,8 +1,29 @@
 ﻿<mat-toolbar color="primary">
-  <span>ReaderApplication Title</span>
+  <button mat-button class="btn-login text-bold	">Books</button>
 
-  <!-- This fills the remaining space of the current row -->
-  <span class="example-fill-remaining-space"></span>
-
-  <span>Right Aligned Text</span>
+  <button mat-button class="btn-login text-bold">Taken books</button>
 </mat-toolbar>
+
+<mat-grid-list cols="3" >
+  <mat-grid-tile *ngFor="let book of books" class="book-grid-title">
+    <mat-card class="book-card" >
+      <mat-card-header>
+        <div mat-card-avatar class="book-header-image"></div>
+        <mat-card-title>{{ book.title}}</mat-card-title>
+        <mat-card-subtitle>{{ book.author }} - {{ book.edition }}</mat-card-subtitle>
+        <mat-card-subtitle>{{ book.publicationDateTime }}</mat-card-subtitle>
+
+      </mat-card-header>
+      <img mat-card-image src="https://www.mockupworld.co/wp-content/uploads/edd/2017/04/clean-magazine-brochure-mockup-3.jpg" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p>
+         {{ book.description }}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>Read</button>
+        <button mat-button class="btn-float-right">Read in library</button>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
