--- a/lib-app/src/app/login/login.component.html
+++ b/lib-app/src/app/login/login.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <button mat-raised-button [disabled]="loading" color="primary" class="btn-login">Login</button>
-                <button mat-raised-button [routerLink]="['/register']" class="btn-register">Register</button>
+                <button mat-raised-button [routerLink]="['/register']" class="btn-float-right">Register</button>
             </div>
             <mat-progress-bar [style.display]="loading ? 'block' : 'none'" mode="indeterminate"></mat-progress-bar>
         </form>
