--- a/lib-app/src/app/home-reader/home-reader.component.html
+++ b/lib-app/src/app/home-reader/home-reader.component.html
@@ -6,7 +6,21 @@
 
 
 <mat-sidenav-container class="book-container">
-  <mat-sidenav mode="side" opened class="book-sidenav">Sidenav content</mat-sidenav>
+
+  <mat-sidenav mode="side" opened class="book-sidenav">
+
+    <form class="book-filter-form">
+      <h2>Filter</h2>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Find by title"/>
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Find by author"/>
+      </mat-form-field>
+    </form>
+  </mat-sidenav>
+
   <mat-sidenav-content>
     <mat-grid-list cols="3" rowHeight="600px">
       <mat-grid-tile *ngFor="let book of books" class="book-grid-title ">
@@ -30,7 +44,7 @@
             </p>
           </mat-card-content>
           <mat-card-actions>
-            <button mat-button color="primary" class="text-bold">Read</button>
+            <button mat-button color="primary" class="text-bold" (click)="readBook(book.id)">Read</button>
             <button mat-button class="btn-float-right text-bold" color="primary">Read in library</button>
           </mat-card-actions>
         </mat-card>
