--- a/lib-app/src/styles.css
+++ b/lib-app/src/styles.css
@@ -66,3 +66,13 @@ body {
 .book-sidenav {
   width: 300px;
 }
+
+.book-filter-form {
+  text-align: center;
+  padding-top: 100px;
+}
+
+.book-filter-form h2 {
+  font-size: 1.5rem;
+  color: #1565c0;
+}
