dialog order book

--- a/lib-app/src/app/home-reader/home-reader.component.html
+++ b/lib-app/src/app/home-reader/home-reader.component.html
@@ -44,8 +44,7 @@
             </p>
           </mat-card-content>
           <mat-card-actions>
-            <button mat-button color="primary" class="text-bold" (click)="readBook(book.id)">Read</button>
-            <button mat-button class="btn-float-right text-bold" color="primary">Read in library</button>
+            <button mat-button color="primary" class="text-bold" (click)="openDialog(book.id)">Read</button>
           </mat-card-actions>
         </mat-card>
       </mat-grid-tile>
