--- a/lib-app/src/app/home-reader/book-order-dialog.html
+++ b/lib-app/src/app/home-reader/book-order-dialog.html
@@ -3,15 +3,18 @@
   <p>Where would you like to read the book ?</p>
   <mat-form-field>
     <mat-select placeholder="Book order type" [(ngModel)]="data.bookOrderType">
-      <mat-option *ngFor="let bookOrderType of data.bookOrderTypes" [value]="bookOrderType" >
+      <mat-option required *ngFor="let bookOrderType of data.bookOrderTypes" [value]="bookOrderType" >
         {{bookOrderType}}
       </mat-option>
     </mat-select>
   </mat-form-field>
 
-  <p>When would you like to return it ?</p>
-  <mat-form-field>
-    <input matInput [matDatepicker]="picker" placeholder="Due date" [value]="data.dueDate" [(ngModel)]="data.dueDate">
+  <p *ngIf="data.bookOrderType === 'Library'">
+    When would you like to return it ?
+  </p>
+  <mat-form-field *ngIf="data.bookOrderType === 'Library'">
+    <input matInput required [matDatepicker]="picker" placeholder="Due date"
+           [value]="data.dueDate" [(ngModel)]="data.dueDate">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
