--- a/lib-app/src/styles.css
+++ b/lib-app/src/styles.css
@@ -2,7 +2,6 @@
 
 body {
   margin: 0;
-  background-color: #e9ecef;
 }
 
 .text-bold {
@@ -64,15 +63,36 @@ body {
 
 
 .book-sidenav {
-  width: 300px;
+  background-color: #1565c0 !important;
+  width: 268px;
 }
 
 .book-filter-form {
   text-align: center;
-  padding-top: 100px;
 }
 
 .book-filter-form h2 {
   font-size: 1.5rem;
   color: #1565c0;
+}
+
+.alert {
+  margin: 50px;
+}
+
+.toolbar {
+  height: 50px !important;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 1000;
+  box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+}
+
+.margin20 {
+  margin: 20px !important;
+}
+
+.progress-bar-books {
+  width: 95% !important;
 }
