--- a/lib-app/src/app/home-reader/home-reader.component.html
+++ b/lib-app/src/app/home-reader/home-reader.component.html
@@ -1,7 +1,7 @@
 ﻿<mat-toolbar color="primary" class="toolbar">
-  <button mat-button class="btn-login text-bold	">Books</button>
+  <button mat-button class="btn-login text-bold	" (click)="openAllBooks()">Books</button>
 
-  <button mat-button class="btn-login text-bold">My books</button>
+  <button mat-button class="btn-login text-bold" (click)="openMyBooks()">My books</button>
 </mat-toolbar>
 
 
