--- a/lib-app/src/app/my-books-reader/my-books.component.html
+++ b/lib-app/src/app/my-books-reader/my-books.component.html
@@ -11,35 +11,37 @@
 
 
   </mat-sidenav>
-  <mat-sidenav-content>
-    <table mat-table [dataSource]="bookRecords" class="mat-elevation-z8">
+  <mat-sidenav-content class="book-content">
+    <div class="book-record-table mat-elevation-z8">
+    <table mat-table [dataSource]="bookRecords"  *ngIf="books.length != 0">
 
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef> Title </th>
+        <td mat-cell *matCellDef="let element"> {{findBookById(element.bookId).title}} </td>
       </ng-container>
-
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <ng-container matColumnDef="fromDate">
+        <th mat-header-cell *matHeaderCellDef> From date </th>
+        <td mat-cell *matCellDef="let element"> {{element.fromDate | date:"MM/dd/yyyy"}} </td>
       </ng-container>
-
-      <!-- Weight Column -->
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+      <ng-container matColumnDef="dueDate">
+        <th mat-header-cell *matHeaderCellDef > Due date </th>
+        <td mat-cell *matCellDef="let element"> {{element.dueDate | date:"MM/dd/yyyy"}} </td>
       </ng-container>
-
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      <ng-container matColumnDef="penalty">
+        <th mat-header-cell *matHeaderCellDef> Penalty </th>
+        <td mat-cell *matCellDef="let element"> {{element.penalty}} </td>
       </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <td mat-cell *matCellDef="let element"> {{element.bookStatus}} </td>
+      </ng-container>
+      <ng-container matColumnDef="approved">
+        <th mat-header-cell *matHeaderCellDef> Approved </th>
+        <td mat-cell *matCellDef="let element" [style.color]="element.approved ? 'green' : 'red'"> <b>X</b> </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
