--- a/lib-app/src/styles.css
+++ b/lib-app/src/styles.css
@@ -98,3 +98,20 @@ body {
 .progress-bar-books {
   width: 95% !important;
 }
+
+
+table {
+  margin: 0 auto;
+  width: 100%;
+
+}
+
+.book-content {
+  height: 94vh !important;
+}
+
+.book-record-table {
+  margin: 50px;
+  height: 82vh;
+  overflow: auto;
+}
