--- a/lib-app/src/app/my-books-reader/my-books.component.html
+++ b/lib-app/src/app/my-books-reader/my-books.component.html
@@ -2,6 +2,13 @@
   <button mat-button class="btn-login text-bold	"  (click)="openAllBooks()">Books</button>
 
   <button mat-button class="btn-login text-bold"  (click)="openMyBooks()">My books</button>
+
+  <!-- This fills the remaining space of the current row -->
+  <span class="fill-remaining-space"></span>
+  <div fxLayout="row" fxShow="false" fxShow.gt-sm>
+    <button mat-button class="text-bold">Hi, {{login}}!</button>
+  </div>
+
 </mat-toolbar>
 
 
