--- a/lib-app/src/app/login/login.component.html
+++ b/lib-app/src/app/login/login.component.html
@@ -12,7 +12,7 @@
             </div>
             <div class="form-group">
                 <mat-form-field class="main-full-width">
-                    <input matInput placeholder="Password" formControlName="password"/>
+                    <input matInput type="password" placeholder="Password" formControlName="password"/>
                 </mat-form-field>
                 <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                     <div *ngIf="f.password.errors.required">Passregisterword is required</div>
