block/unblock feature

--- a/lib-app/src/app/register/register.component.html
+++ b/lib-app/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 ﻿<mat-card class="card-login">
   <div class="form-login">
-    <h3 class="txt-login">Login</h3>
+    <h3 class="txt-login">Register</h3>
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <mat-form-field class="main-full-width">
