--- a/lib-app/src/app/navigation/navigation.component.html
+++ b/lib-app/src/app/navigation/navigation.component.html
@@ -3,6 +3,9 @@
     <button mat-button class="btn-login text-bold	" (click)="openAllBooks()">Books</button>
     <button mat-button class="btn-login text-bold" (click)="openMyBooks()">My books</button>
   </div>
+  <div *ngIf="authorities == 'ROLE_ADMIN'">
+    <button mat-button class="btn-login text-bold	" (click)="openAllUsers()">Users</button>
+  </div>
   <span class="fill-remaining-space"></span>
   <div fxLayout="row" fxShow="false" fxShow.gt-sm>
     <button mat-button class="text-bold">Hi, {{login}}!</button>
