--- a/lib-app/src/app/navigation/navigation.component.html
+++ b/lib-app/src/app/navigation/navigation.component.html
@@ -5,6 +5,7 @@
   </div>
   <div *ngIf="authorities == 'ROLE_ADMIN'">
     <button mat-button class="btn-login text-bold	" (click)="openAllUsers()">Users</button>
+    <button mat-button class="btn-login text-bold	" (click)="openAllLibrarians()">Librarians</button>
   </div>
   <span class="fill-remaining-space"></span>
   <div fxLayout="row" fxShow="false" fxShow.gt-sm>
